Hora total dinámica

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <header>
         <h1>Horas Mensuales de Trabajo</h1>
     </header>
-    <div class="horas">
+    <div class="hours-bar">
         <span>0</span>
-        <span class="barra-horas"></span>
-        <span>125h</span>
+        <span class="hours-bar__bar"></span>
+        <span class="hours-bar__total-hours">0h</span>
     </div>
     <div class="inversiones">
         <div class="gastos-esenciales section">
@@ -21,14 +21,14 @@
                 <h2>Gastos esenciales</h2>
             </div>
             <div class="items">
-                <div class="item completed">
+                <div class="item completed" title="horas: 15">
                     <div>
                         <span>Aportes:</span>
                         <span class="input">$510.000</span>
                     </div>
                     <span class="hour">0h</span>
                 </div>
-                <div class="item completed">
+                <div class="item completed" title="horas: 34">
                     <div>
                         <span>Arriendo:</span>
                         <span class="input">$650.000</span>
