Ajuste del Valor por hora

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     </header>
     <div class="hours-bar">
         <span>0</span>
-        <span class="hours-bar__bar"></span>
+        <div class="hours-bar__bar">
+            <span class="work-time">103h</span>
+        </div>
         <span class="hours-bar__total-hours">0h</span>
     </div>
     <div class="inversiones">
@@ -21,56 +23,56 @@
                 <h2>Gastos esenciales</h2>
             </div>
             <div class="items">
-                <div class="item completed" title="horas: 15">
+                <div class="item" title="horas: 15">
                     <div>
                         <span>Aportes:</span>
                         <span class="input">$510.000</span>
                     </div>
                     <span class="hour">0h</span>
                 </div>
-                <div class="item completed" title="horas: 34">
+                <div class="item" title="horas: 34">
                     <div>
                         <span>Arriendo:</span>
                         <span class="input">$650.000</span>
                     </div>
                     <span class="hour">19h</span>
                 </div>
-                <div class="item completed">
+                <div class="item">
                     <div>
                         <span>Internet:</span>
                         <span class="input">$68.000</span>
                     </div>
                     <span class="hour">2h</span>
                 </div>
-                <div class="item completed">
+                <div class="item">
                     <div>
                         <span>Energia:</span>
                         <span class="input">$69.000</span>
                     </div>
                     <span class="hour">2h</span>
                 </div>
-                <div class="item completed">
+                <div class="item">
                     <div>
                         <span>Agua:</span>
                         <span class="input">$69.000</span>
                     </div>
                     <span class="hour">2h</span>
                 </div>
-                <div class="item completed">
+                <div class="item">
                     <div>
                         <span>Gas:</span>
                         <span class="input">$20.000</span>
                     </div>
                     <span class="hour">1h</span>
                 </div>
-                <div class="item completed">
+                <div class="item">
                     <div>
                         <span>Gasolina:</span>
                         <span class="input">$120.000</span>
                     </div>
                     <span class="hour">3,5h</span>
                 </div>
-                <div class="item completed">
+                <div class="item">
                     <div>
                         <span>Casa mamá:</span>
                         <span class="input">$510.000</span>
@@ -91,14 +93,14 @@
                 <h2>Deudas</h2>
             </div>
             <div class="items">
-                <div class="item completed">
+                <div class="item">
                     <div>
                         <span>Nequi:</span>
                         <span class="input">$216.000</span>
                     </div>
                     <span class="hour">6,5h</span>
                 </div>
-                <div class="item current">
+                <div class="item">
                     <div>
                         <span>Banco Bogotá:</span>
                         <span class="input">$390.000</span>
@@ -108,7 +110,7 @@
                 <div class="item">
                     <div>
                         <span>Tarjeta:</span>
-                        <span class="input">$310.000</span>
+                        <span class="input">$574.000</span>
                     </div>
                     <span class="hour">9h</span>
                 </div>
